# HumanClaw

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  chat.html  control.html  electron-builder.yml  index.html  openclaw-installer-builder.cjs  package.json  pet.html  pnpm-lock.yaml  render.yaml  requirements.txt  setup.html  vite.config.js
.github/workflows/: deploy-pages.yml
backend/: .env.example  AISafety.py  __init__.py  main.py  test_env.py
backend/api/: chat.py  schemas.py  tts.py
backend/core/: config.py  database.py
backend/models/: db_models.py
backend/services/: ai_safety_service.py  compress_service.py  conversation_service.py  llm_service.py  memory_service.py  rag_service.py  (+2 more)
electron/: app-edition.cjs  desktop_asr_worker.py  edition-manifest.cjs  fs-layout.cjs  local-asr-manager.cjs  main.cjs  openclaw-gateway.cjs  openclaw-operator-supervisor.cjs  openclaw-provider-config.cjs  preload.cjs  store.cjs
examples/python_safety_client/: README.md  demo_inputs.txt  pyproject.toml
examples/python_safety_client/src/aigril_safety_client/: __init__.py  cli.py  client.py  demo_async.py  demo_sync.py  models.py
openclaw-installer/: README.md  index.html  main.cjs  preload.cjs  renderer.js  supervisor.cjs
scripts/: copy-static-assets.mjs  prepare-openclaw-runtime.mjs
src/: app.js  chat-panel-app.js  chat-service.js  chat-tts-system.js  config.js  control-panel-app.js  desktop-speech-recognition.js  openclaw-chat-service.js  pet-app.js  runtime-settings.js  setup-panel-app.js  speech-provider.js  tts-audio-player.js  vrm-model-system.js
(+9 files in other folders)
