[project]
name = "aigril-safety-client"
version = "0.1.0"
description = "Python examples for the AIGril safety moderation API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28,<1.0",
]

[project.scripts]
aigril-safety-demo = "aigril_safety_client.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
